# mcp-gateway-registry

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  CLAUDE.md  Dockerfile  Makefile  README.md  build-config.yaml  build_and_run.sh  buildspec.yml  docker-compose.federation-test.yml  docker-compose.podman.yml  docker-compose.prebuilt.yml  docker-compose.yml  get_asor_token.py  mkdocs.yml  pyproject.toml
.github/: dependabot.yml
agents/: agent.py  cli_user_auth.py  client.py  registry_client.py
api/: README.md  openapi.json  registry_client.py  registry_management.py  test-management-api-e2e.sh
auth_server/: .env.template  cognito_utils.py  egress_obo.py  group_filter.py  internal_request_token.py  metrics_middleware.py  mongodb_groups_enrichment.py  oauth2_providers.yml  pyproject.toml  scopes.yml  server.py  session_store.py
auth_server/observability/: meters.py
auth_server/providers/: __init__.py  auth0.py  base.py  cognito.py  entra.py  factory.py  keycloak.py  okta.py  pingfederate.py
charts/: README.md
cli/: agent_mgmt.py  anthropic_transformer.py  get_user_token.py  mcp_client.py  mcp_security_scanner.py  mcp_utils.py  package-lock.json  package.json  registry_cli_wrapper.py  scan_all_servers.py  service_mgmt.sh  sync_okta_m2m.py  test_a2a_agents.py  test_anthropic_api.py  test_asor_complete.py
common/: __init__.py  logging_config.py
config/: prometheus.yml
credentials-provider/: add_noauth_services.py  token_refresher.py
docker/: Dockerfile.auth  Dockerfile.mcp-server  Dockerfile.mcp-server-cpu  Dockerfile.mcp-server-light  Dockerfile.registry  Dockerfile.registry-cpu  Dockerfile.scopes-init  auth-entrypoint.sh  nginx_rev_proxy_http_and_https.conf  nginx_rev_proxy_http_only.conf  registry-entrypoint.sh
docs/: FEATURES.md  OBSERVABILITY-LEGACY.md  OBSERVABILITY.md  README.md  TELEMETRY.md  a2a-agent-management.md  a2a.md  agentcore.md  ai-coding-assistant-registry-integration.md  ai-coding-assistants-setup.md  ai-registry-tools.md  anthropic_registry_api.md  api-reference.md  ard-catalog-publisher.md  ard-registry.md  ard.md  auth-mgmt.md  auth.md  auth0.md  aws-agent-registry-federation.md  cli.md  cognito.md  complete-setup-guide.md  configuration.md  custom-entities.md  database-design.md  demo-videos.md  dynamic-tool-discovery.md  egress-credential-vault.md  embeddings.md  entra-id-setup.md  entra.md  index.md  installation.md  jwt-token-vending.md  keycloak-agent-m2m.md  keycloak.md  llms.txt  logging.md  macos-setup-guide.md  (+18 more)
servers/mcpgw/: logging_setup.py  models.py  pyproject.toml  server.py
(+942 files in other folders)
