[project]
name = "mcpgw-mcp-server"
version = "0.1.0"
description = "MCP server to interact with the MCP Gateway Registry API"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastmcp>=3.2.0,<4.0.0",
    "pydantic>=2.11.3",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "cryptography>=48.0.1",
    "opentelemetry-api>=1.41.1",
    "opentelemetry-sdk>=1.41.1",
    "opentelemetry-exporter-prometheus>=0.62b1",
    "opentelemetry-exporter-otlp>=1.41.1",
    "opentelemetry-distro[otlp]>=0.62b1",
    "opentelemetry-instrumentation>=0.62b1",
    "opentelemetry-instrumentation-fastapi>=0.62b1",
    "opentelemetry-instrumentation-httpx>=0.62b1",
    "opentelemetry-instrumentation-asyncio>=0.62b1",
    "opentelemetry-instrumentation-logging>=0.62b1",
    "opentelemetry-instrumentation-pymongo>=0.62b1",
    "opentelemetry-propagator-b3>=1.41.1",
]

[tool.uv]
# Local-only project - never resolve from PyPI
package = false
